--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Section: java
 Priority: optional
 Maintainer: Evan Dandrea <ev@ubuntu.com>
 Build-Depends: debhelper (>= 7), cdbs, default-jdk, maven-debian-helper (>= 1.5)
-Build-Depends-Indep: junit4 
+Build-Depends-Indep: junit4
 Standards-Version: 3.9.2
 Homepage: https://github.com/evandandrea/cassandra-dpkgversiontype
 
 Package: libcassandra-dpkgversiontype-java
 Architecture: all
-Depends: ${misc:Depends}, ${maven:Depends}, cassandra (>= 1.2.2)
+Depends: ${misc:Depends}, ${maven:Depends}, cassandra (>= 1.0), cassandra (<< 2.0)
 Recommends: ${maven:OptionalDepends}
 Description: cassandra-dpkgversiontype
  Dpkg binary version comparator for Cassandra.
