--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,23 @@
 		<dependency>
 			<groupId>org.apache.cassandra</groupId>
 			<artifactId>cassandra-all</artifactId>
-			<version>1.2.2</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/cassandra-all-1.2.2.jar</systemPath>
+			<version>1.0.7</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/cassandra-all-1.0.7.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava-base</artifactId>
+			<version>r03</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/guava-base-r03.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.4</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/commons-lang-2.4.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
