--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.canonical</groupId>
 	<artifactId>cassandra-dpkgversiontype</artifactId>
-	<version>1.2.1</version>
+	<version>1.2.5</version>
 	<packaging>jar</packaging>
 	
 	<name>cassandra-dpkgversiontype</name>
@@ -12,8 +12,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<debian.hasPackageVersion>
 		</debian.hasPackageVersion>
-		<debian.mavenRules>com.canonical cassandra-dpkgversiontype jar 1.2.1 * *</debian.mavenRules>
-		<debian.originalVersion>1.2.1</debian.originalVersion>
+		<debian.mavenRules>com.canonical cassandra-dpkgversiontype jar 1.2.5 * *</debian.mavenRules>
+		<debian.originalVersion>1.2.5</debian.originalVersion>
 		<debian.package>libcassandra-dpkgversiontype-java</debian.package>
 	</properties>
 	<build>
@@ -31,10 +31,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.cassandra</groupId>
-			<artifactId>cassandra-all</artifactId>
-			<version>1.0.7</version>
+			<artifactId>apache-cassandra</artifactId>
+			<version>1.2.5</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/cassandra-all-1.0.7.jar</systemPath>
+			<systemPath>${project.basedir}/lib/apache-cassandra-1.2.5.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
